horas del mundo

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ clase07/ejemploEventos/target
 /clase07/ejemploFrame/target/
 /clase07/PadreHijo/target/
 /clase07/horasMundo/target/
+/clase08/VisualHorasMundo/target/
+/clase07/HorasMundoClase/target/
