--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ clase07/ejemploEventos/target
 /clase07/horasMundo/target/
 /clase08/VisualHorasMundo/target/
 /clase07/HorasMundoClase/target/
+/clase07/stockMarket/target/
